use 2.2 gc settings